--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,147 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginBottom="16dp"
+        android:onClick="Restart"
+        android:text="@string/restart"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/grid"
+        android:layout_width="412dp"
+        android:layout_height="447dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="155dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="TODO"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/grid" />
+
+    <ImageView
+        android:id="@+id/pos1"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="244dp"
+        android:onClick="Pos1Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos2"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="248dp"
+        android:onClick="Pos2Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/statusIcon"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="32dp"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos3"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="244dp"
+        android:onClick="Pos3Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos4"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="356dp"
+        android:onClick="Pos4Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos5"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="356dp"
+        android:onClick="Pos5Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos6"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="356dp"
+        android:onClick="Pos6Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos7"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="460dp"
+        android:onClick="Pos7Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos8"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="460dp"
+        android:onClick="Pos8Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
+
+    <ImageView
+        android:id="@+id/pos9"
+        android:layout_width="84dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="460dp"
+        android:onClick="Pos9Clicked"
+        android:alpha="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/x" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
